--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor-community/barcode-scanner": "^4.0.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.5",
@@ -17,6 +18,8 @@
     "@reduxjs/toolkit": "^2.10.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-qr-reader": "^3.0.0-beta-1",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-redux": "^9.2.0",
     "react-router": "^7.9.6",
     "react-router-dom": "^7.9.6"
@@ -31,9 +34,11 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "html5-qrcode": "^2.3.8",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.3",
     "vite": "^7.2.2",
+    "vite-plugin-mkcert": "^1.17.9",
     "vite-plugin-pwa": "^1.1.0"
   }
 }
